--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--########### NAV BAR STARTS HERE ##################################################### -->
 
-<nav class="navbar navbar-expand-sm navbar-dark mb-3" style="background-color: #2B547E;">
+<nav class="navbar navbar-expand-sm navbar-dark mb-3" style="background-color: #0b2336ed;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Liberty Certification Tracker</a>
+    <a class="navbar-brand" href="#" style="color: yellow;">Liberty Certification Tracker</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,7 +15,7 @@
       </form>
     </div> -->
     <div class="d-sm-flex">
-      <a routerLink="create-contact" routerLinkActive="active" class="btn btn-sm btn-dark text-light nav-link">Add Employee</a>
+      <a routerLink="create-contact" routerLinkActive="active" class="btn btn-sm btn-dark text-info nav-link">Add Employee</a>
     </div>
   </div>
 </nav>
